# gui-raspberry

./: .gitignore  CMakeLists.txt  ConsoleApplication3.sln  gr-k19.db  gr-k50.db  gr.db
ConsoleApplication3/: ConsoleApplication3.cpp  ConsoleApplication3.vcxproj  ConsoleApplication3.vcxproj.filters  Func.cpp  Func2.cpp  head.cpp
ConsoleApplication3/Debug/: ConsoleApplication3.pch  consoleapplication3.obj.enc  vc141.idb
ConsoleApplication3/Debug/ConsoleA.FED90ED9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ConsoleApplication3/Release/: ConsoleApplication3.pch
ConsoleApplication3/Release/ConsoleA.FED90ED9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication3.lastbuildstate  ConsoleApplication3.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: ConsoleApplication3.ilk
PIGPIO/: x_pigpiod_if2
Release/: ConsoleApplication3.iobj  ConsoleApplication3.ipdb
db/: db.cpp  function.cpp
flex/: flex.cpp  func.cpp  socket.cpp
gui/: gui.cpp
src/: db.cpp  flex.cpp  func.cpp  gr.db  gui.cpp  main.cpp  struct.h
src/db/: db.cpp  derive.cpp  gr.db
src/flex/: COM_Port.cpp  connect.cpp  flex.cpp  func.cpp  my.cpp  open.cpp
src/gui/: draw.cpp  gpio.cpp  gui.cpp  sound.cpp
